--- a/index.html
+++ b/index.html
@@ -1,1 +1,68 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <h1 id="title">freeCodeCamp Survey Form</h1>
+    <p id="description"><em>Thank you for taking the time to help us improve the platform</em></p>
+    <div class="container">
+        <form action="" id="survey-form"></form>
+        <fieldset>
+            <label for="name">Name <input type="text" id="name" placeholder="Enter your name" name="name" required></label>
+            <label for="email">Email <input type="email" id="email" placeholder="Enter your email" name="email" required></label>
+            <label for="age">Age (optional) <input type="number" id="age" name="age"></label>
+            <label for="describles">Which option best describes current role
+                <select name="describes" id="describes">
+                    <option value="">Select current role</option>
+                    <option value="student">Student</option>
+                    <option value="full-time-job">Full Time Job</option>
+                    <option value="full-time-learner">Full time learner</option>
+                    <option value="prefer-not-to-say">Prefer Not To Say</option>
+                    <option value="other">Other</option>
+                </select>
+            </label>
+        </fieldset>
+        <fieldset >
+            <label for="recommend"> Would you recommend freeCodeCamp to a friend </label>
+            <label for="difinitely"><input type="radio" name="recommend" value="definitely" selected> Definitely</label>
+            <label for="maybe"><input type="radio" name="recommend" value="maybe"> Maybe</label>
+            <label for="not-sure"><input type="radio" name="recommend" value="not-sure"> Not sure</label>
+        </fieldset>
+        <fieldset >
+            <label for="favorite-feature">What is your favorite feature of freeCodeCamp?</label>
+            <select name="favorite-feature" id="favorite-feature">
+                <option value="">Select an option</option>
+                <option value="challanges">Challanges</option>
+                <option value="project">Projects</option>
+                <option value="community">Community</option>
+                <option value="open-source">Open Source</option>
+            </select>
+        </fieldset>
+        <fieldset >
+            <label for="">What would you like to see improved?</label>
+            <p>(Check all that apply)</p>
+            <input type="checkbox" id="front-end"><label for="front-end"> Front-end Projects</label>
+            <input type="checkbox" id="back-end"><label for="back-end">Back-end Projects</label>
+            <input type="checkbox" id="data-visualization"><label for="data-visualization">Data Visualization</label>
+            <input type="checkbox" id="challanges"><label for="challanges">Challanges</label>
+            <input type="checkbox" id="open-source"><label for="open-source">Open source Community</label>
+            <input type="checkbox" id="gitter"><label for="gitter">Gitter help room</label>
+            <input type="checkbox" id="videos"><label for="videos">Video</label>
+            <input type="checkbox" id="city"><label for="city">City Meetups</label>
+            <input type="checkbox" id="wiki"><label for="wiki">Wiki</label>
+        </fieldset>
+        <fieldset >
+            <label for="Any comments or suggestions"></label>
+            <textarea name="suggestion" id="suggestion" cols="50" rows="10"></textarea>
+        </fieldset>
+        <fieldset >
+            <input type="submit" id="submit">
+        </fieldset>
+    </div>
+</body>
+</html>
